change api host

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 server.port = 8090
 
-api.host = http://localhost:8080/
+#api.host = http://localhost:8080/
+api.host = https://concurrent-postprocesor-rest.herokuapp.com/
