--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
 server.port = 8090
 
 api.host = http://localhost:8080/
+
+spring.servlet.multipart.max-file-size=128000KB
+spring.servlet.multipart.max-request-size=128000KB
