--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port = 8090
 
-api.host = http://localhost:8080/
+api.host = https://concurrent-postprocesor-rest.herokuapp.com/
 
 spring.servlet.multipart.max-file-size=128000KB
 spring.servlet.multipart.max-request-size=128000KB
